tests/fails/defer.t
terra foo()
    defer 3
end
foo()